Fixed iconbox text overlapping header

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -486,7 +486,7 @@ body {
   /* thanks brooke */
 
   .upperRightIcon {
-    z-index: 3;
+    z-index: 2;
     color: #fff;
     font-size: 16px;
     font-weight: bold;
@@ -496,7 +496,7 @@ body {
     text-shadow: 0px 0px 5px black, 0px 0px 5px black;
   }
   .upperRightIconSmall {
-    z-index: 3;
+    z-index: 2;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
